--- a/client.html
+++ b/client.html
@@ -19,172 +19,22 @@
 			<canvas id="screen" width='10' height='10'></canvas>
     </body>
 
-    <script>
+    <script type="module">
+      import createKeyboardListener from './keyboard-listener.js'
+      import createGame from './game.js'
+      import renderScreen from './render-screen.js'
+
       const screen = document.getElementById('screen')
-      const context = screen.getContext('2d')
-      const currentPlayerId = 'player1'
-
-      function createGame() {
-        const state = {
-          players: {},
-          fruits: {}
-        }
-
-        function addPlayer(command) {
-          const {playerId, playerX, playerY} = command
-
-          state.players[playerId] = {
-            x: playerX,
-            y: playerY,
-          }
-        }
-
-        function removePlayer(command) {
-          const {playerId} = command
-
-          delete state.players[playerId]
-        }
-
-        function addFruit(command) {
-          const {fruitId, fruitX, fruitY} = command
-
-          state.fruits[fruitId] = {
-            x: fruitX,
-            y: fruitY,
-          }
-        }
-
-        function removeFruit(command) {
-          const {fruitId} = command
-
-          delete state.fruits[fruitId]
-        }
-
-        function checkForFruitCollision(playerId) {
-          const player = state.players[playerId]
-
-          for(const fruitId in state.fruits) {
-            const fruit = state.fruits[fruitId]
-
-            if (player.x === fruit.x && player.y === fruit.y) {
-              removeFruit({ fruitId })
-            }
-          }
-        }
-
-        function movePlayer(command) {
-          const acceptedMoves = {
-            ArrowUp(player) {
-              if (player.y -1 >= 0) {
-                player.y -= 1
-              }
-            },
-            ArrowDown(player) {
-              if (player.y + 1 < screen.height) {
-                player.y += 1
-              }
-            },
-            ArrowRight(player) {
-              if (player.x + 1 < screen.width) {
-                player.x += 1
-              }
-            },
-            ArrowLeft(player) {
-              if (player.x - 1 >= 0) {
-                player.x -= 1
-              }
-            },
-          }
-
-          const {playerId, keyPressed} = command
-          const player = state.players[playerId]
-          const moveFunction = acceptedMoves[keyPressed]
-
-          if (player && moveFunction) {
-            moveFunction(player)
-            checkForFruitCollision(playerId)
-          }
-        }
-
-        return {
-          state,
-          movePlayer,
-          addPlayer,
-          removePlayer,
-          addFruit,
-          removeFruit
-        }
-      }
-
-      function createKeyboardListener() {
-        const state = {
-          observers: []
-        }
-
-        function subscribe(observerFunction) {
-          state.observers.push(observerFunction)
-        }
-
-        function notifyAll(command) {
-          console.log(`Notifying ${state.observers.length} observers`)
-
-          for(const observerFunction of state.observers) {
-            observerFunction(command)
-          }
-        }
-
-        document.addEventListener('keydown', handleKeyDown)
-
-        function handleKeyDown(event) {
-          const keyPressed = event.key
-
-          const command = {
-            playerId: currentPlayerId,
-            keyPressed
-          }
-
-          notifyAll(command)
-        }
-
-        return {
-          subscribe
-        }
-      }
-
-      function renderScreen() {
-        context.fillStyle = 'white'
-        context.clearRect(0, 0, 10, 10)
-
-        const {players, fruits} = game.state;
-
-        for (const playerId in players) {
-          const player = players[playerId]
-
-          context.fillStyle = 'black'
-          context.fillRect(player.x, player.y, 1, 1)
-        }
-
-        for (const fruitId in fruits) {
-          const fruit = fruits[fruitId]
-
-          context.fillStyle = 'green'
-          context.fillRect(fruit.x, fruit.y, 1, 1)
-        }
-
-        requestAnimationFrame(renderScreen)
-      }
-
       const game = createGame()
 
-      game.addPlayer({playerId: currentPlayerId, playerX: 0, playerY: 0})
+      game.addPlayer({playerId: 'player1', playerX: 0, playerY: 0})
       game.addPlayer({playerId: 'currentPlayerId', playerX: 0, playerY: 0})
       game.addFruit({fruitId: 'fruit1', fruitX: 5, fruitY: 5})
 
-      const keyboardListener = createKeyboardListener()
+      const keyboardListener = createKeyboardListener(document)
       keyboardListener.subscribe(game.movePlayer)
 
-      renderScreen()
-
-       </script>
+      renderScreen(screen, game, requestAnimationFrame)
+    </script>
 	</head>
 </html>
